--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,14 +1,10 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="283.642" Width="530.851">
-    <WrapPanel HorizontalAlignment="Left" Height="188" Margin="161,30,0,0" VerticalAlignment="Top" Width="267" RenderTransformOrigin="0.536,0.452">
-        <Button Content="Login" Width="70" Click="Button_Click_1" Height="20" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Height="23" TextWrapping="Wrap" Text="TextBox" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
-        <Label Content="Login" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="40" Height="25" RenderTransformOrigin="0.525,0.44"/>
-        <TextBox Height="23" TextWrapping="Wrap" Text="TextBox" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="90,10,0,0" Padding="0"/>
-        <Label Content="Pass" RenderTransformOrigin="0.515,0.615" Width="35" HorizontalAlignment="Right" Margin="220,0,0,0"/>
-    </WrapPanel>
+        Title="MainWindow" Height="154.892" Width="359.851">
+    <Grid HorizontalAlignment="Left" Height="100" Margin="10,10,0,-41" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.71,0.32">
+        <Button Content="Button" HorizontalAlignment="Left" Margin="15,41,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+    </Grid>
 </Window>
 
 
