--- a/WpfApplication1/Window1.xaml
+++ b/WpfApplication1/Window1.xaml
@@ -1,11 +1,15 @@
 ﻿<Window x:Class="WpfApplication1.myDesktop"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="305.97" Width="497.016">
-    <Grid Margin="10,0,-8,3">
-        <Button Content="Diagrams" HorizontalAlignment="Left" Margin="63,54,0,0" VerticalAlignment="Top" Width="138" Height="48" Click="Button_Click"/>
-        <Button Content="Desktop" HorizontalAlignment="Left" Margin="63,114,0,0" VerticalAlignment="Top" Width="138" Height="48" Click="Button_Click_1"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="63,174,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Height="48" Click="Button_Click_2">
+        Title="MainMenu" Height="305.97" Width="294.016" Background="#FF75A69B">
+    <Grid Margin="10,0,0,3" HorizontalAlignment="Left" Width="265">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="176*"/>
+            <ColumnDefinition Width="89*"/>
+        </Grid.ColumnDefinitions>
+        <Button Content="Diagrams" HorizontalAlignment="Left" Margin="63,54,0,0" VerticalAlignment="Top" Width="138" Height="48" Click="Button_Click" FontFamily="Trebuchet MS" Grid.ColumnSpan="2"/>
+        <Button Content="Desktop" HorizontalAlignment="Left" Margin="63,114,0,0" VerticalAlignment="Top" Width="138" Height="48" Click="Button_Click_1" FontFamily="Trebuchet MS" Grid.ColumnSpan="2"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="63,174,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Height="48" Click="Button_Click_2" FontFamily="Trebuchet MS" Grid.ColumnSpan="2">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
