--- a/WpfApplication1/Window2.xaml
+++ b/WpfApplication1/Window2.xaml
@@ -5,12 +5,12 @@
         xmlns:DV="clr-namespace:System.Windows.Controls.DataVisualization;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:DVC="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:pie="clr-namespace:PieControls;assembly=PieControls"
-        Title="Window2" Height="297.015" Width="465.672">
+        Title="Diagrama_Wydatkow" Height="280.597" Width="408.956">
     <Grid HorizontalAlignment="Left" Height="262" VerticalAlignment="Top" Width="456">
        
-        <DVC:Chart Canvas.Top="80" Canvas.Left="10" Name="mcChart"
+        <DVC:Chart Canvas.Top="80" Canvas.Left="10" Name="wydatkiChart"
            Width="400" Height="250"
-           Background="LightGray" Margin="10,10,56,5">
+           Background="#FF75A69B" Margin="0,0,56,12">
             <DVC:Chart.Series>
                 <DVC:BarSeries Title="Wydatki"
             IndependentValueBinding="{Binding Path=Key}"
@@ -19,5 +19,4 @@
             </DVC:Chart.Series>
         </DVC:Chart>
     </Grid>
-
 </Window>
