--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="154.892" Width="359.851">
-    <Grid HorizontalAlignment="Left" Height="100" Margin="10,10,0,-41" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.71,0.32">
-        <Button Content="Button" HorizontalAlignment="Left" Margin="15,41,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        Title="startup" Height="154.892" Width="359.851" Background="#FF635F5F">
+    <Grid HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="309" RenderTransformOrigin="0.71,0.32">
+        <Button Content="start" HorizontalAlignment="Left" Margin="122,28,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label Content="App was created by &#xD;&#xA;Yevhen Remonetskyy 1 jun 2016" HorizontalAlignment="Left" Margin="42,53,0,0" VerticalAlignment="Top" Width="203" Height="47"/>
     </Grid>
 </Window>
 
